update wb login bug
