# docs/swagger.json
@@ -328,6 +328,46 @@
                 }
             }
         },
+        "/RemovedUserFromGroup": {
+            "post": {
+                "description": "移除群聊用户",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "移除群聊用户"
+                ],
+                "summary": "移除群聊用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 31a165baebe6dec616b1f8f3207b4273",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "群聊id",
+                        "name": "group_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户id",
+                        "name": "user_id",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/SendFriendRequest": {
             "post": {
                 "description": "发送好友请求接口",
